--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,8 +1,20 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
+
 /* Header Style */
 header {
   background-color: #333;
   color: #fff;
   padding: 10px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 nav ul li {
@@ -25,14 +37,12 @@ nav ul li a {
   display: block;
 }
 
-
-
 /* info */
 .info {
   position: relative;
   width: 100vw;
   height: 100vh;
-  background: url("https://s3-alpha-sig.figma.com/img/43a6/c2ce/b3fa8b4ca9412d765375211e15b7ded5?Expires=1700438400&Signature=ciwEV2yDllcxT9BPOH4FEUDi2U8-UZ9htHTB8tcHxQ3JJw72IznQdEK6vQbz0cJfcJ4~3lr~qep0~LRBCSh1f2Zvxl5XwyklrsEkJmlEN1E70v6qOOmEm82ZoUO0Hn6LHqTdpR9PJmP9S9ThdfW4mpS64VGaAjyL-lDeHSnZbQb3pncqTK9n4TYAU3Hvp97q01Yio1QgkJPrRACTep3oyB0JnKUr67~o-I~YSlFUNEmuoHBSR0qeWW3wzXfyFNEOhk5dtCMUZ-51wrYuOfLs1shleCkDdOu8E3IpecJfo2K8OiE6sX0pM6wX9tqvRqAvKSiabN-VdBN-mCWLi4TNVA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4") no-repeat 0px 0px, #FFFFFF;
+  background: url("https://s3-alpha-sig.figma.com/img/43a6/c2ce/b3fa8b4ca9412d765375211e15b7ded5?Expires=1702252800&Signature=a-n9uY4zZnJga91O~0t4tYv72ASJYvHCTtULdBuRQgU4WFd2ohKgdVuBrfO9xHK~V3Ec3g8hrEvlPHviG9u4TMvBGmYCvY9icR6g-G8RPSLITJLdZtU8b2Dxp1FQbkymzF8IkSrwrkwyLviiAz2Lrl7UYXzsu71pxWLEa1SIto9X8l60o7tEWzN8uY2p4cKzbw9Pn0LwATmMV4~i5O09hQsvT4TgSumucXf9pLFWhhJMqpMjp-~fXFTHgSNnW-six-CqDt-bl8WLKbA9sI5Nw3jpBo03CKpAd0W40I7DmqBv42Op73LMARcb7K~FzDV-KOiTVsolQTTqJfSu0BYRvw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4") no-repeat 0px 0px, #FFFFFF;
   background-size: cover;
 }
 
